==> Samsung/TizenRT/os/arch/xtensa/src/esp32/esp32_adc.c <==
#include <tinyara/config.h>
#include <sys/types.h>
#include <string.h>
#include <assert.h>
#include <debug.h>
#include <errno.h>
#include <stdio.h>
#include <tinyara/irq.h>
#include <tinyara/wqueue.h>
#include <tinyara/wdog.h>
#include <tinyara/analog/adc.h>
#include <tinyara/analog/ioctl.h>
#include "chip/esp32_rtc_adc.h"
#include "esp32_adc.h"
#define ESP32_ADC_MAX_CHANNELS ADC1_CHANNEL_MAX
#define ESP32_ADC_DEFAULT_PEROID  10
#define ESP32_ADC_MIN_PEROID    1
#define ESP32_ADC_MAX_PEROID    1000000
#define DEBUG_ADC	0
#define adcinfo(format, ...)   printf(format, ##__VA_ARGS__)
#define adcinfo(format, ...)
#define CONVERT_ONECHANNEL		1

static void adc_conversion(int argc, uint32_t arg)
{
	uint16_t sample = 0;
	struct esp32_dev_s *priv = (struct esp32_dev_s *)arg;

#if defined(CONVERT_ONECHANNEL) && (0 < CONVERT_ONECHANNEL)
	/* Read the ADC sample and pass it to the upper-half */
	sample = adc1_get_raw((adc1_channel_t)priv->chanlist[priv->current]);

	adcinfo("[ADC] conversion %d %d: %d\n", priv->current, priv->chanlist[priv->current], sample);
	if (priv->cb != NULL && priv->cb->au_receive != NULL) {
		priv->cb->au_receive(priv->dev, priv->chanlist[priv->current], sample);
	}

	/* Set the next channel to be sampled */
	priv->current++;

	if (priv->current >= priv->nchannels) {
		priv->current = 0;
	}

	/*next conversion */
	wd_start(priv->work, PeroidPerChannel, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
#else
	if (priv->current >= priv->nchannels) {
		priv->current = 0;
	}

	while (priv->current < priv->nchannels) {
		/* Read the ADC sample and pass it to the upper-half */
		sample = adc1_get_raw((adc1_channel_t)priv->chanlist[priv->current]);

		adcinfo("[ADC] conversion %d %d: %d\n", priv->current, priv->chanlist[priv->current], sample);
		if (priv->cb != NULL && priv->cb->au_receive != NULL) {
			priv->cb->au_receive(priv->dev, priv->chanlist[priv->current], sample);
		}
		/* Set the next channel to be sampled */
		priv->current++;
	}
	priv->current = 0;

	wd_start(priv->work, PeroidPerChannel, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
#endif
}

static void adc_startconv(FAR struct esp32_dev_s *priv, bool enable)
{
	if (enable) {
		wd_cancel(priv->work);
		wd_start(priv->work, ESP32_ADC_MIN_PEROID, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
	} else {
		wd_cancel(priv->work);
	}
	adcinfo("[ADC] conv %d: %d\n", enable, get_errno());
}

static int adc_set_ch(FAR struct adc_dev_s *dev, uint8_t ch)
{
	int i;
	FAR struct esp32_dev_s *priv = (FAR struct esp32_dev_s *)dev->ad_priv;

	if (ch == 0) {
		/*
		 * 0 is reserved for special purpose which samples
		 * all channels
		 */
		priv->current = 0;
		priv->nchannels = priv->cchannels;
	} else {
		/* REVISIT: changing channel is not supported for now */
		for (i = 0; i < priv->cchannels && priv->chanlist[i] != ch - 1; i++) ;

		if (i >= priv->cchannels) {
			return -ENODEV;
		}

		priv->current = i;
		priv->nchannels = 1;
	}

	adc1_config_channel_atten(priv->chanlist[priv->current], ADC_ATTEN_0db);

	return OK;
}

static int adc_setup(FAR struct adc_dev_s *dev)
{
	int ret;
	FAR struct esp32_dev_s *priv = (FAR struct esp32_dev_s *)dev->ad_priv;

	/* Attach the ADC interrupt */

	/* Make sure that the ADC device is in the powered up, reset state */
	adc_reset(dev);

	/* Enable the ADC interrupt */
	//up_enable_irq(IRQ_ADC);

	adcinfo("[ADC] adc_setup: %d, %d...\n\t", priv->cchannels, priv->nchannels);
	for (ret = 0; ret < priv->nchannels; ret++) {
		adcinfo("%d ", priv->chanlist[ret]);
	}
	adcinfo("\n");

	ret = adc1_config_width(ADC_WIDTH_12Bit);
	adcinfo("[ADC] adc1_config_width:%d\n\n", ret);

	return OK;
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
	FAR struct esp32_dev_s *priv = (FAR struct esp32_dev_s *)dev->ad_priv;

	wd_cancel(priv->work);
	adc_power_off();
}

struct adc_dev_s *esp32_adc_initialize(FAR const adc_channel_t *chanlist, int cchannels)
{
	FAR struct esp32_dev_s *priv = &g_adcpriv;

	/* Initialize the public ADC device data structure */
	g_adcdev.ad_ops = &g_adcops;
	g_adcdev.ad_priv = priv;

	/* Initialize the private ADC device data structure */
	priv->cb = NULL;
	priv->dev = &g_adcdev;
	priv->cchannels = cchannels;

	if (cchannels > ESP32_ADC_MAX_CHANNELS) {
		lldbg("ESP32 ADC1 has maximum %d ADC channels.\n", ESP32_ADC_MAX_CHANNELS);
		return NULL;
	}

	memcpy(priv->chanlist, chanlist, cchannels * sizeof(adc_channel_t));
	adcinfo("ESP32 ADC channel count %d\n", cchannels);

	adc1_config_width(ADC_WIDTH_12Bit);

	priv->work = wd_create();

	return &g_adcdev;
}
