==> Samsung/TizenRT/os/arch/arm/src/imxrt/imxrt_adc.c <==
#include <tinyara/config.h>
#include <sys/types.h>
#include <string.h>
#include <assert.h>
#include <debug.h>
#include <errno.h>
#include <stdio.h>
#include <tinyara/irq.h>
#include <tinyara/wqueue.h>
#include <tinyara/wdog.h>
#include <tinyara/analog/adc.h>
#include <tinyara/analog/ioctl.h>
#include "imxrt_clock.h"
#include "imxrt_adc.h"
#define IMXRT_ADC_MAX_CHANNELS 10
#define IMXRT_ADC_DEFAULT_PEROID  10
#define IMXRT_ADC_MIN_PEROID    1
#define IMXRT_ADC_MAX_PEROID    1000000
#define CONVERT_ONECHANNEL		1
#define ADC_CHANNEL_GROUP       0

static void adc_conversion(int argc, uint32_t arg)
{
	uint16_t sample = 0;
	struct imxrt_dev_s *priv = (struct imxrt_dev_s *)arg;

#if defined(CONVERT_ONECHANNEL) && (0 < CONVERT_ONECHANNEL)
	/* Read the ADC sample and pass it to the upper-half */
	while (0U == imxrt_adc_getchannelstatusflags(ADC1, ADC_CHANNEL_GROUP)) {
	}
	sample = imxrt_adc_getchannelconversionvalue(ADC1, ADC_CHANNEL_GROUP);

	lldbg("[ADC] conversion %d %d: %d\n", priv->current, priv->chanlist[priv->current], sample);
	if (priv->cb != NULL && priv->cb->au_receive != NULL) {
		priv->cb->au_receive(priv->dev, priv->chanlist[priv->current], sample);
	}

	/* Set the next channel to be sampled */
	priv->current++;

	if (priv->current >= priv->nchannels) {
		priv->current = 0;
	}

	/*next conversion */
	wd_start(priv->work, PeroidPerChannel, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
#else
	if (priv->current >= priv->nchannels) {
		priv->current = 0;
	}

	while (priv->current < priv->nchannels) {
		/* Read the ADC sample and pass it to the upper-half */
		while (0U == imxrt_adc_getchannelstatusflags(ADC1, ADC_CHANNEL_GROUP)) {
		}
		sample = imxrt_adc_getchannelconversionvalue(ADC1, ADC_CHANNEL_GROUP);

		lldbg("[ADC] conversion %d %d: %d\n", priv->current, priv->chanlist[priv->current], sample);
		if (priv->cb != NULL && priv->cb->au_receive != NULL) {
			priv->cb->au_receive(priv->dev, priv->chanlist[priv->current], sample);
		}
		/* Set the next channel to be sampled */
		priv->current++;
	}
	priv->current = 0;

	wd_start(priv->work, PeroidPerChannel, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
#endif
}

static void adc_startconv(FAR struct imxrt_dev_s *priv, bool enable)
{
	if (enable) {
		#if !(defined(FSL_FEATURE_ADC_SUPPORT_HARDWARE_TRIGGER_REMOVE) && FSL_FEATURE_ADC_SUPPORT_HARDWARE_TRIGGER_REMOVE)
		imxrt_adc_enablehardwaretrigger(ADC1, false);
		#endif

		/* Do auto hardware calibration. */
		if (kStatus_Success == imxrt_adc_doautocalibration(ADC1)) {
			lldbg("imxrt_adc_doautocalibration() Done.\r\n");
		} else {
			lldbg("imxrt_adc_doautocalibration() Failed.\r\n");
		}

		wd_cancel(priv->work);
		wd_start(priv->work, IMXRT_ADC_MIN_PEROID, (wdentry_t)&adc_conversion, 1, (uint32_t)priv);
	} else {
		wd_cancel(priv->work);
	}
	lldbg("[ADC] conv %d: %d\n", enable, get_errno());
}

static int adc_set_ch(FAR struct adc_dev_s *dev, uint8_t ch)
{
	int i;
	adc_channel_config_t adcChannelConfigStruct;
	FAR struct imxrt_dev_s *priv = (FAR struct imxrt_dev_s *)dev->ad_priv;

	if (ch == 0) {
		/*
		 * 0 is reserved for special purpose which samples
		 * all channels
		 */
		priv->current = 0;
		priv->nchannels = priv->cchannels;
	} else {
		/* REVISIT: changing channel is not supported for now */
		for (i = 0; i < priv->cchannels && priv->chanlist[i] != ch - 1; i++) ;

		if (i >= priv->cchannels) {
			return -ENODEV;
		}

		priv->current = i;
		priv->nchannels = 1;
	}

		/* Configure the user channel and interrupt. */
	adcChannelConfigStruct.channelNumber = priv->current;
	adcChannelConfigStruct.enableInterruptOnConversionCompleted = false;
	imxrt_adc_setchannelconfig(ADC1, 0, &adcChannelConfigStruct);

	return OK;
}

static int adc_setup(FAR struct adc_dev_s *dev)
{
	int ret;
	adc_config_t adcConfigStrcut;
	adc_channel_config_t adcChannelConfigStruct;

	FAR struct imxrt_dev_s *priv = (FAR struct imxrt_dev_s *)dev->ad_priv;

	/* Attach the ADC interrupt */

	/* Make sure that the ADC device is in the powered up, reset state */
	adc_reset(dev);

	/* Enable the ADC interrupt */
	//up_enable_irq(IRQ_ADC);

	lldbg("[ADC] adc_setup: %d, %d...\n\t", priv->cchannels, priv->nchannels);
	for (ret = 0; ret < priv->nchannels; ret++) {
		lldbg("%d ", priv->chanlist[ret]);
	}
	lldbg("\n");

	imxrt_adc_getdefaultconfig(&adcConfigStrcut);
	imxrt_adc_init(ADC1, &adcConfigStrcut);

	lldbg("[ADC] adc1_config_width:%d\n\n", ret);

	return OK;
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
	FAR struct imxrt_dev_s *priv = (FAR struct imxrt_dev_s *)dev->ad_priv;

	wd_cancel(priv->work);
	imxrt_adc_deinit(ADC1);
}

struct adc_dev_s *imxrt_adc_initialize(FAR const uint8_t *chanlist, int cchannels)
{
	FAR struct imxrt_dev_s *priv = &g_adcpriv;

	/* Initialize the public ADC device data structure */
	g_adcdev.ad_ops = &g_adcops;
	g_adcdev.ad_priv = priv;

	/* Initialize the private ADC device data structure */
	priv->cb = NULL;
	priv->dev = &g_adcdev;
	priv->cchannels = cchannels;

	if (cchannels > IMXRT_ADC_MAX_CHANNELS) {
		lldbg("IMXRT ADC1 has maximum %d ADC channels.\n", IMXRT_ADC_MAX_CHANNELS);
		return NULL;
	}

	memcpy(priv->chanlist, chanlist, cchannels * sizeof(uint8_t));
	lldbg("IMXRT ADC channel count %d\n", cchannels);

	priv->work = wd_create();

	return &g_adcdev;
}
